Thu Dec 11 04:27:24 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: introduce new field
	  rb_thread_t::local_storage_recursive_hash_for_trace to store
	  recursive hash to avoid creating new recursive (nested) hashes
	  for each trace events.
	  [Bug #10511]

	* vm_trace.c (rb_threadptr_exec_event_hooks_orig): use it.

	* cont.c: catch up this fix.

	* vm.c (rb_thread_mark): ditto.

Wed Dec 10 13:39:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (define_aref_method, define_aset_method): use iseq
	  VALUE instead of rb_iseq_t to prevent from GC, as RB_GC_GUARD
	  makes sense only for local variables.  [Feature #10575]

Wed Dec 10 09:38:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (exec_recursive): use the same last method name as
	  recursive_push in the error message when recursive_pop failed.
	  [ruby-core:66742] [Bug #10579]

Wed Dec 10 02:48:46 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/net/http/test_https.rb
	  (TestNetHTTPS#test_certificate_verify_failure): on Windows,
	  Errno::ECONNRESET will be raised when the verify is failure at the
	  client side, and it'll be eaten by WEBrick.

	* test/open-uri/test_ssl.rb (TestOpenURISSL#test_validation_failure):
	  ditto.

Wed Dec 10 00:42:13 2014  Eric Wong  <e@80x24.org>

	* iseq.c (rb_method_for_self_aref, rb_method_for_self_aset):
	  new methods to generate bytecode for struct.c
	  [Feature #10575]
	* struct.c (rb_struct_ref, rb_struct_set): remove
	  (define_aref_method, define_aset_method): new functions
	  (setup_struct): use new functions
	* test/ruby/test_struct.rb: add test for struct >10 members
	* benchmark/bm_vm2_struct_big_aref_hi.rb: new benchmark
	* benchmark/bm_vm2_struct_big_aref_lo.rb: ditto
	* benchmark/bm_vm2_struct_big_aset.rb: ditto
	* benchmark/bm_vm2_struct_small_aref.rb: ditto
	* benchmark/bm_vm2_struct_small_aset.rb: ditto

Tue Dec  9 20:24:41 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
